p2/force-app/main/default/objects/Exam_Question__c/Exam_Question__c.object-meta.xml
<CustomObject>
    <label>Exam Question</label>
    <nameField>
        <label>Exam Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>