p2/force-app/main/default/objects/Exam_Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Exam Questions</relationshipLabel>
    <relationshipName>Exam_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>