p2/force-app/main/default/objects/Exam_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Exam Questions</relationshipLabel>
    <relationshipName>Exam_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>